force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Log records store application errors captured in our code. It can also be used to log performance data or batch job information.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>