force-app/main/default/objects/Log__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <description>Additional information that may be useful for debugging</description>
    <label>Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>