force-app/main/default/objects/Log__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location (class.method) from where the Log record was created.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>