force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Logged message on the record. Can be an error or informational.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>